# ComputerGraphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: GridSimulation.comp  bezierCurve.frag  bezierCurve.geom  bezierCurve.vert  computeNormals.comp  duck.frag  duck.vert  lightBillboard.frag  lightBillboard.vert  skyBox.frag  skyBox.vert  test.frag  test.vert  water.frag  water.vert  waterSimulation.comp
shaders/tessellation/: controlPoints.vert  quad.frag  quad.tesc  quad.tese  quad.vert
source/: BSplineRandomizer.cpp  BSplineRandomizer.h  bezierCurve.cpp  camera.cpp  camera.h  cube.cpp  cube.h  duck.cpp  duck.h  duckWindow.cpp  duckWindow.h  glfwWindowWrap.cpp  light.cpp  light.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  uniformBufferObject.cpp  waterGrid.cpp  waterGrid.h
source/common/: CMakeLists.txt  shader.h
source/duck/: CMakeLists.txt  waterGrid.cpp
source/puma/: CMakeLists.txt  main.cpp  pumaWindow.cpp  pumaWindow.h
source/tessellation/: CMakeLists.txt  fpsCounter.cpp  keyboardManager.cpp  keyboardManager.h  main.cpp  quad.cpp  tessellationWindow.cpp  tessellationWindow.h
